apps/music-assistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: music-assistant
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8095
      targetPort: 8095
  type: ClusterIP
