apps/music-assistant/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: music-assistant
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-authentik-auth@kubernetescrd
spec:
  ingressClassName: traefik-traefik
  tls:
    - hosts:
        - music-assistant.home.bstjohn.net
      secretName: wildcard-home-tls
  rules:
    - host: music-assistant.home.bstjohn.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: music-assistant
                port:
                  number: 8095
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: music-assistant-ext
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-authentik-auth-ext@kubernetescrd
spec:
  ingressClassName: traefik-traefik
  tls:
    - hosts:
        - music-assistant.ext.bstjohn.net
      secretName: wildcard-home-tls
  rules:
    - host: music-assistant.ext.bstjohn.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: music-assistant
                port:
                  number: 8095
